# Animus

./: .gitignore  Animus.ttsp  Animus_Test_Windows_1.txt  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_Init_Inst.md  ORNSTEIN_FINAL_TEST_SUMMARY.md  ORNSTEIN_MODEL_TEST_REPORT.md  QUICKSTART.md  README.md  TTS_TEST_REPORT.md  ecosystem.json  install.py  pyproject.toml  requirements.txt  test_all_models.py  test_ornstein_live.py
.github/workflows/: ci.yml
LLM_GECK/: GECK_Inst.md  GECK_Repor_Instructions.md  LLM_init.md  MANIFOLD_BUILD_INSTRUCTIONS.md  Phase_2_assessment.md  README.md  Session_Summary_2_14.md  env.md  log.md  repor_findings.md  tasks.md
LLM_GECK/Archival Assets/: Anthropic_References.md  BUGFIX_PERMISSION_CHECKER.md  COMPLETE_MODEL_TEST_RESULTS.md  Codebase_Analysis_2_13.md  Efficacy_and_Effectiveness.md  Improvement_Audit_2_12.md  Management_Resources.md  ORNSTEIN_PHASE1_COMPLETE.md  ORNSTEIN_PHASE2_PLAN.md  README_TTS.md
agent-tasks/: agent-tasks.md  completed-tasks.md
config_examples/: audio_enabled.yaml  isolation_enabled.yaml
crates/ferric-cli/: Cargo.toml
crates/ferric-cli/src/: delegate.rs  main.rs
crates/ferric-cli/src/commands/: config_cmd.rs  detect.rs  mod.rs  status.rs
crates/ferric-parse/: Cargo.toml
crates/ferric-parse/src/: main.rs  output.rs
crates/ferric-parse/src/parsers/: mod.rs  python.rs  rust_lang.rs
crates/ferric-parse/tests/: test_parse.rs
crates/ferric-parse/tests/fixtures/: sample.py  sample.rs
crates/ferric-sandbox/: Cargo.toml
crates/ferric-sandbox/src/: main.rs
docs/: AUDIO_HOOKS_GUIDE.md  DESIGN_PRINCIPLES.md  ORNSTEIN_PHASE2_COMPLETE.md  ORNSTEIN_SMOUGH_ARCHITECTURE.md  TTS_SETUP.md  trtllm-setup.md  web_search_security_design.md
docs/plans/: 2026-02-24-hardening-refactor-design.md  2026-02-24-hardening-refactor-plan.md  2026-03-08-feedback-implementation.md  2026-03-09-ferric-layer-improvements.md
scripts/: export_voice_profile.py  run_gauntlet.py  sync-license.ps1  verify_tts_setup.py
sprints/s0/: sprint-meta.md
sprints/s0/sprint-plans/: build-plan.md  test-plan.md
sprints/s0/sprint-research/: research-report.md
sprints/s0/sprint-tests/: test-report.md
sprints/s1/: sprint-meta.md
sprints/s1/sprint-plans/: build-plan.md  test-plan.md
sprints/s1/sprint-research/: research-report.md
sprints/s1/sprint-tests/: test-report.md
src/: __init__.py  __main__.py  ferric.py  incantations.py  install.py  main.py
src/analysis/: __init__.py  indexer.py  parser.py  tools.py
src/api/: __init__.py  server.py  websocket_server.py
src/audio/: __init__.py  cache.py  config.py  engine.py  player.py  voice_profile.py
src/audio/assets/: README.md
src/cli/: __init__.py  app.py  session_manager.py  slash_commands.py
src/core/: __init__.py  agent.py  auth_rotation.py  builder.py  code_action.py  compaction.py  config.py  context.py  cwd.py  decision.py  detection.py  dicl.py  errors.py  fallback.py  feedback.py  gbnf.py  grammar.py  judge.py  knowledge.py  logging.py  loop_detector.py  media.py  permission.py  planner.py  queue.py  run.py  session.py  specialists.py  subagent.py  tokenizer.py  tool_parsing.py  transcript.py  web_validator.py  workspace.py
src/core/planner/: __init__.py  decomposer.py  executor.py  parser.py
src/isolation/: __init__.py  ferric.py  ornstein.py
src/knowledge/: __init__.py  graph_db.py  indexer.py  parser.py
src/llm/: __init__.py  api.py  base.py  factory.py  litellm_provider.py  native.py  ollama.py  server.py  trtllm.py
src/mcp/: __init__.py  client.py  protocol.py  server.py
src/memory/: __init__.py  chunker.py  contextualizer.py  embedder.py  extractor.py  hybrid.py  ingest.py  scanner.py  vectorstore.py
src/retrieval/: __init__.py  executor.py  feedback.py  router.py
src/skills/: __init__.py  loader.py  parser.py  registry.py
src/subagents/: __init__.py  cleaner.py  edge.py  executor.py  goal.py  graph.py  node.py  session.py
src/tools/: __init__.py  base.py  delegate.py  filesystem.py  git.py  git_workflow.py  graph.py  manifold_search.py  search.py  shell.py  web.py
src/ui/: __init__.py
systests/: test_report.txt
systests/Linux/: hello_test.py  installation_test_log.md  test_animus.py
systests/Windows/: Animus_Test_Windows_2.txt  Animus_Test_Windows_3.txt  Animus_Test_Windows_4.txt
tests/: __init__.py  conftest.py  test_agent.py  test_agent_behavior.py  test_all_models.py  test_analysis.py  test_audio.py  test_auth_rotation.py  test_base_tools.py  test_builder.py  test_cli.py  test_code_action.py  test_config.py  test_context.py  test_cwd.py  test_decision.py  test_delegation.py  test_design_principles.py  test_detection.py  test_dicl.py  test_errors.py  test_fallback.py  test_feedback.py  test_ferric_integration.py  test_ferric_parser.py  test_filesystem.py  test_gauntlet.py  test_gbnf.py  test_git.py  test_git_workflow.py  test_grammar.py  test_ingestion_e2e.py  test_install.py  test_invoke_errors.py  test_isolation.py  test_isolation_integration.py  test_judge.py  test_knowledge.py  test_llm.py  test_logging.py  (+26 more)
vscode-extension/: README.md  package.json
vscode-extension/src/: client.ts  extension.ts  statusBar.ts
vscode-extension/src/decorations/: diffDecorations.ts
vscode-extension/src/views/: changesView.ts  chatView.ts
(+5 files in other folders)
