[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "animus"
version = "0.1.0"
description = "A high-performance, cross-platform CLI coding agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "crussella0129" }
]
keywords = ["cli", "agent", "llm", "coding", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
native = [
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.20.0",
    "sentence-transformers>=2.2.0",
]
memory = [
    "chromadb>=0.4.0",
]
analysis = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
]
ide = [
    "websockets>=12.0",
]
web = [
    "bleach>=6.0.0",
    "readability-lxml>=0.8.0",
]
all = [
    "animus[dev,native,memory,analysis,ide,web]",
]

[project.scripts]
animus = "src.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
