[package]
name = "ferric-cli"
version.workspace = true
edition.workspace = true
description = "Fast Rust entrypoint for Animus CLI — simple commands, delegates to Python for heavy ones"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
