[package]
name = "ferric-cli"
version.workspace = true
edition.workspace = true
description = "Fast Animus CLI entrypoint — simple commands handled in Rust, heavy ones delegate to Python"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.32"
colored = "2"
