[package]
name = "ferric-parse"
version.workspace = true
edition.workspace = true
description = "Multi-language code parser for Animus using tree-sitter grammars"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
